$Id: History,v 1.3 1999-01-09 16:32:50 allison Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

vis-01-00-02  9th January 1999  John Allison
- Changed Scene to SceneHandler, View to Viewer.

vis-01-00-01  6th January 1999  John Allison
- Made G4VisManager::GetInstance() private to prevent inadvertent misuse.
- Removed #include GNU_GCC - no longer necessary for egcs.
- Continued developing the new commands.

vis-00-04-04  16th December 1998  John Allison
- test/GNUmakefile for Linux-g++
- test/test19.cc - removed g4templates.hh
- OpenGL - reverted to 100%.

vis-00-04-03  9th December 1998  John Allison
- Made /vis/ commands from /vis~/.  The idea is to maintain backwards
  compatibility while allowing us to "deprecate" the old commands over
  a period of time.  Some of these /vis/ commands respond with "superceded",
  i.e., superceded by new commands, but still available in /vis~/.