@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ModelingParameters.icc,v 1.1 1999-01-07 16:15:35 gunter Exp $
+// $Id: G4ModelingParameters.icc,v 1.2 1999-01-10 13:25:49 allison Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -46,6 +46,18 @@ inline G4int G4ModelingParameters::GetNoOfSides () const {
   return fNoOfSides;
 }
 
+inline G4bool G4ModelingParameters::IsViewGeom () const {
+  return fViewGeom;
+}
+
+inline G4bool G4ModelingParameters::IsViewHits () const {
+  return fViewHits;
+}
+
+inline G4bool G4ModelingParameters::IsViewDigis () const {
+  return fViewDigis;
+}
+
 inline void G4ModelingParameters::SetDefaultVisAttributes
 (const G4VisAttributes* pDefaultVisAttributes) {
   fpDefaultVisAttributes = pDefaultVisAttributes;
@@ -70,4 +82,28 @@ inline void G4ModelingParameters::SetDensityCulling (G4bool value) {
 
 inline void G4ModelingParameters::SetCullingCovered (G4bool value) {
   fCullCovered = value;
+}
+
+inline void G4ModelingParameters::SetViewGeom () {
+  fViewGeom = true;
+}
+
+inline void G4ModelingParameters::UnsetViewGeom () {
+  fViewGeom = false;
+}
+
+inline void G4ModelingParameters::SetViewHits () {
+  fViewHits = true;
+}
+
+inline void G4ModelingParameters::UnsetViewHits () {
+  fViewHits = false;
+}
+
+inline void G4ModelingParameters::SetViewDigis () {
+  fViewDigis = true;
+}
+
+inline void G4ModelingParameters::UnsetViewDigis () {
+  fViewDigis = false;
 }
