@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4HitsModel.cc,v 1.1 1999-01-07 16:15:37 gunter Exp $
+// $Id: G4HitsModel.cc,v 1.2 1999-01-10 13:25:49 allison Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -14,6 +14,7 @@
 
 #include "G4HitsModel.hh"
 
+#include "G4ModelingParameters.hh"
 #include "G4RunManager.hh"
 #include "G4Event.hh"
 #include "G4HCofThisEvent.hh"
@@ -24,14 +25,16 @@ G4HitsModel::G4HitsModel () {
 }
 
 void G4HitsModel::DescribeYourselfTo (G4VGraphicsScene& scene) {
-  G4RunManager* runManager = G4RunManager::GetRunManager ();
-  const G4Event* event = runManager -> GetCurrentEvent ();
-  if (event) {
-    G4HCofThisEvent* HCE = event -> GetHCofThisEvent ();
-    if (HCE) {
-      G4int nHC = HCE -> GetCapacity ();
-      for (int iHC = 0; iHC < nHC; iHC++) {
-	HCE -> GetHC (iHC) -> DrawAllHits ();
+  if (fpMP && fpMP -> IsViewHits ()) {
+    G4RunManager* runManager = G4RunManager::GetRunManager ();
+    const G4Event* event = runManager -> GetCurrentEvent ();
+    if (event) {
+      G4HCofThisEvent* HCE = event -> GetHCofThisEvent ();
+      if (HCE) {
+	G4int nHC = HCE -> GetCapacity ();
+	for (int iHC = 0; iHC < nHC; iHC++) {
+	  HCE -> GetHC (iHC) -> DrawAllHits ();
+	}
       }
     }
   }
