@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-01-09 16:32:50 allison Exp $
+$Id: History,v 1.4 1999-01-10 13:27:06 allison Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+10th January 1999  John Allison
+- Added flags for viewing geom, hits, digis to G4ModelingParameters.
 
 vis-01-00-02  9th January 1999  John Allison
 - Changed Scene to SceneHandler, View to Viewer.
